# Quasi-Uniform-Points

./: .gitignore  README.md  experiments_01_mesh_ratio.ipynb  experiments_02_separation_radius_new.ipynb  experiments_03_gpr_2d.ipynb  experiments_03_gpr_3d.ipynb  experiments_03_gpr_4d.ipynb  experiments_03_gpr_5d.ipynb  experiments_04_01_01_parameter_sequences.ipynb  experiments_04_01_02_upper_bound.ipynb  experiments_04_01_03_separation_radius.ipynb  experiments_04_01_04_condition_number.ipynb  experiments_04_01_05_lll_optimality.ipynb  experiments_04_02_03_gpr_2d.ipynb  experiments_04_02_03_gpr_3d.ipynb  experiments_04_02_03_gpr_5d.ipynb  experiments_04_02_03_gpr_7d.ipynb  pyproject.toml
data/: korobov_optimal_parameters.npy
lattice_qmc/: __init__.py  baselines.py  explicit_rank1.py  korobov.py  utils.py
revision/: build_notebooks.py  build_notebooks_gpr.py  run_condition_number.py  run_gpr_all.py  run_lll_optimality.py  run_separation_radius.py
